--- a/.github/workflowsmain.yml
+++ b/.github/workflowsmain.yml
@@ -61,7 +61,7 @@ secrets.REPOSITORY_NAME }}:${{ github.run_number }}
  
             resource-group: ${{ secrets.RESOURCE_GROUP }} 
  
-            dns-name-label: ${{ secrets.RESOURCE_GROUP }} 
+            dns-name-label: 'griepgit'
  
             image: ${{ secrets.REGISTRY_LOGIN_SERVER }}/${{ secrets.REPOSITORY_NAME }}:${{ 
 github.run_number }} 
