--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,4 @@ jobs:
            
             azure-file-volume-mount-path: '/etc/todos/'
             
-            azure-file-volume-share-name: 'storfhcit'
+            azure-file-volume-share-name: 'todo'
