--- a/.github/workflowsmain.yml
+++ b/.github/workflowsmain.yml
@@ -84,4 +84,4 @@ github.run_number }}
            
             azure-file-volume-mount-path: '/etc/todos/'
             
-            azure-file-volume-share-name: 'storfhcit'
+            azure-file-volume-share-name: 'todo'
